# magic-qc

./: -v  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  justfile  pyproject.toml  requirements.txt  uniqc.spec  zensical.toml
CHANGELOG/: 0.1.0.md
docs/: api.md
scripts/: build  pre-build
src/config/: quality_standards.json
src/magic_qc/: __init__.py  cli.py
src/magic_qc/business/facial/: face_checker.py  facial_symmetry.py  quality_checker.py  symmetry_checker.py
src/magic_qc/business/facial/eye/: eye_checker.py
src/magic_qc/business/industrial/: industrial_checker.py
src/magic_qc/core/: base_checker.py
src/magic_qc/interface/: config_cli.py  facial_cli.py  facial_cli.py.bak
src/magic_qc/interface/facial/: display.py  export.py
src/magic_qc/management/config/: config_loader.py  config_manager.py  config_reader.py  config_writer.py
src/magic_qc/management/config/facial/: config.py  quality_standards_v2.json
src/magic_qc/management/rules/facial/: quality_rules.py  symmetry_rules.py
src/magic_qc/scripts/: optimize_quality.py
src/magic_qc/technology/facial/: feature_detector.py  quality_analyzer.py  symmetry.py
tests/: test_uniqc.py
